--- a/arch/arm/boot/dts/mstar-infinity2m-ssd201-som2d01-common.dtsi
+++ b/arch/arm/boot/dts/mstar-infinity2m-ssd201-som2d01-common.dtsi
@@ -5,7 +5,7 @@
  */
 
 / {
-	vcc_core: gpio-regulator {
+	vcc_core: regulator@0 {
 		compatible = "regulator-gpio";
 		regulator-name = "vcc_core";
 		regulator-type = "voltage";
@@ -17,7 +17,7 @@
 			  950000  0x0>;
 	};
 
-	vcc_dram: fixedregulator@1 {
+	vcc_dram: regulator@1 {
 		compatible = "regulator-fixed";
 		regulator-name = "vcc_dram";
 		regulator-min-microvolt = <1800000>;
