--- a/arch/arm/boot/dts/mstar-infinity2m-ssd202d-sbc2d06.dts
+++ b/arch/arm/boot/dts/mstar-infinity2m-ssd202d-sbc2d06.dts
@@ -11,6 +11,12 @@
 	model = "SBC2D06 (SSD202D)";
 	compatible = "ido,sbc2d06", "mstar,infinity2m";
 
+	aliases {
+		console = &pm_uart;
+		ethernet0 = &emac;
+		ethernet1 = &emac1;
+	};
+
 	leds {
 		compatible = "gpio-leds";
 		sys_led {
