--- a/arch/arm/boot/dts/mstar-infinity2m.dtsi
+++ b/arch/arm/boot/dts/mstar-infinity2m.dtsi
@@ -192,3 +192,7 @@
 &sc_gp_ctrl_muxes {
 	compatible = "sstar,ssd20xd-sc-gp-ctrl-muxes";
 };
+
+&clkgen {
+	compatible = "sstar,ssd20xd-clkgen";
+};
