--- a/arch/arm/boot/dts/mstar-infinity2m-ssd202d-unitv2.dts
+++ b/arch/arm/boot/dts/mstar-infinity2m-ssd202d-unitv2.dts
@@ -106,13 +106,14 @@
 	status = "okay";
 };
 
-//&usbphy1 {
-//	status = "okay";
-//};
+&usbphy2 {
+	vbus-supply = <&vcc_wifi>;
+	status = "okay";
+};
 
-//&uhc1 {
-//	status = "okay";
-//};
+&uhc2 {
+	status = "okay";
+};
 
 &emac {
 	status = "okay";
