--- a/arch/arm/boot/dts/mstar-v7.dtsi
+++ b/arch/arm/boot/dts/mstar-v7.dtsi
@@ -477,6 +477,7 @@
 				#clock-cells = <3>;
 				clock-names = "deglitch",
 					      "xtal_div2",
+					      "xtal_div2_div40",
 					      "gate0",
 					      "gate1",
 					      "gate2",
@@ -497,6 +498,7 @@
 
 				clocks = <&xtal_div2>,
 					 <&xtal_div2>,
+					 <&xtal_div2_div40>,
 					 /* gates */
 					 <&upll 0>,
 					 <&upll 1>,
