--- a/arch/arm/boot/dts/mstar-infinity2m.dtsi
+++ b/arch/arm/boot/dts/mstar-infinity2m.dtsi
@@ -122,6 +122,11 @@
 		status = "disabled";
 	};
 
+	mop: mop@280a00 {
+		compatible = "sstar,ssd20xd-mop";
+		reg = <0x280a00 0x600>;
+	};
+
 	upll1: upll@283e00 {
 		#clock-cells = <1>;
 		compatible = "mstar,msc313-upll";
