--- a/arch/arm/boot/dts/mstar-infinity2m-ssd202d-som2d01.dts
+++ b/arch/arm/boot/dts/mstar-infinity2m-ssd202d-som2d01.dts
@@ -18,7 +18,7 @@
 
 	chosen {
 		stdout-path = "serial0:115200n8";
-		bootargs = "console=ttyS0,115200 clk_ignore_unused earlyprintk";
+		bootargs = "console=ttyS0,115200 clk_ignore_unused earlyprintk drm.debug=0x1ff";
 	};
 };
 
