--- a/arch/arm/boot/dts/mstar-infinity2m.dtsi
+++ b/arch/arm/boot/dts/mstar-infinity2m.dtsi
@@ -250,6 +250,10 @@
 	status = "okay";
 };
 
+&gpio {
+	interrupt-parent = <&gpi>;
+};
+
 &uhc0 {
 	interrupts-extended = <&intc_irq GIC_SPI 55 IRQ_TYPE_LEVEL_HIGH>;
 };
